@@ -4,6 +4,9 @@ Flusspferd Change Log
 Release 0.7
 -----------
 
+2009-08-31:
+- Use new getopt API for parsing interpreter / shell arguments.
+
 2009-07-30:
 - Add (core) "getopt" plugin and C++ API.
 
